--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "your-project-name",
+  "name": "video-cutting-app",
   "version": "1.0.0",
-  "description": "Your project description",
-  "main": "index.js",
+  "description": "A web application for cutting and saving video clips from live streams.",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "build": "your-build-command"
@@ -10,15 +10,14 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.24.0", // Example: Axios for making HTTP requests
-    "express": "^4.17.1", // Example: Express.js for building APIs
-    "vue": "^2.6.14", // Example: Vue.js for frontend development
-    // Add other dependencies here
+    "express": "^4.17.1",
+    "ffmpeg": "^5.0.0",
+    "vue": "^2.6.14",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0", // Example: Babel ESLint for code linting
-    "eslint": "^8.0.0", // Example: ESLint for code linting
-    "webpack": "^5.58.2", // Example: Webpack for bundling assets
-    // Add other development dependencies here
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.0.0",
+    "webpack": "^5.58.2"
   }
 }
